# voice-assistant

./: LICENSE  README.md  assistant.py  config.py  main.py  pyproject.toml  transcriber.py  utils.py
