[project]
name = "voice-assistant"
version = "0.1.0"
description = "Voice Assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pocketsphinx>=5.0.4",
    "pyaudio>=0.2.14",
    "pyjokes>=0.8.3",
    "sounddevice>=0.5.3",
    "speechrecognition>=3.14.3",
    "tts>=0.22.0",
    "wikipedia>=1.4.0",
]
